--- a/src/components/portfolioItem.module.css
+++ b/src/components/portfolioItem.module.css
@@ -1,15 +1,21 @@
 .item {
   display: flex;
   margin-bottom: 80px;
+  flex-direction: column;
+  justify-content: center;
+  width: 90%;
+  max-width: 720px;
+  align-items: center;
 }
 
 .imageDiv {
-  /* background-image: linear-gradient(to right bottom, #cfd9df, #e2ebf0); */
-  background-image: linear-gradient(to right bottom, #f3fcfc, #ecf8f8);
-  margin: 0;
-  align-self: center;
-  width: 300px;
-  height: 200px;
+  background-image: linear-gradient(to right bottom, #ebebeb, #ecf8f8);
+  /*background-image: linear-gradient(to right bottom, #cfd9df, #e2ebf0);*/
+  /*background-image: linear-gradient(to right bottom, #f3fcfc, #ecf8f8);*/
+  margin: 0 0 10px 0;
+  width: 100%;
+  max-width: 300px;
+  max-height: 200px;
   box-shadow: 0px 8px 13px -7px rgba(0, 0, 0, 0.8);
 }
 
@@ -19,7 +25,15 @@
 }
 
 .textDiv {
-  width: 200px;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  max-width: 420px;
+}
+
+.sectionDiv {
+  width: 50%;
+  max-width: 210px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -36,29 +50,7 @@
 }
 
 .textDivLink {
-  text-decoration: none;
   font-weight: bold;
-  color: #098c8c;
-  display: inline-block;
-  position: relative;
-}
-
-.textDivLink::after {
-  content: '';
-  position: absolute;
-  width: 100%;
-  transform: scaleX(0);
-  height: 1px;
-  bottom: 1px;
-  left: 0;
-  background-color: #098c8c;
-  transform-origin: bottom right;
-  transition: transform 0.3s cubic-bezier(0.86, 0, 0.07, 1);
-}
-
-.textDivLink:hover::after {
-  transform: scaleX(1);
-  transform-origin: bottom left;
 }
 
 .divider {
@@ -77,4 +69,18 @@
   border-style: solid;
   border-color: #098c8c;
   border-width: 0 1px 0 0;
+}
+
+@media screen and (min-width: 768px) {
+  .item {
+    flex-direction: row;
+  }
+
+  .imageDiv {
+    margin: 0;
+  }
+
+  .textDiv {
+    align-self: stretch;
+  }
 }
