--- a/src/global.css
+++ b/src/global.css
@@ -1,6 +1,29 @@
 html {
   background-color: #f8f8f8;
 }
-body {
-  overflow: hidden;
+
+.link {
+  text-decoration: none;
+  font-weight: bold;
+  color: #098c8c;
+  display: inline-block;
+  position: relative;
+}
+
+.link::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 1px;
+  bottom: 1px;
+  left: 0;
+  background-color: #098c8c;
+  transform-origin: bottom right;
+  transition: transform 0.3s cubic-bezier(0.86, 0, 0.07, 1);
+}
+
+.link:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
 }
