--- a/src/components/portfolioItem.module.css
+++ b/src/components/portfolioItem.module.css
@@ -71,6 +71,10 @@
   border-width: 0 1px 0 0;
 }
 
+.italic {
+  font-style: italic;
+}
+
 @media screen and (min-width: 768px) {
   .item {
     flex-direction: row;
