--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 70px;
+  margin-bottom: 60px;
 }
 
 .iconLink,
@@ -33,6 +33,7 @@
   box-shadow: inset 0 -40px 40px -20px #f8f8f8;
   background-image: url('../images/bg.jpg');
   background-size: cover;
+  background-position: center;
   display: flex;
   align-items: center;
   justify-content: center;
